# disk-space-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: code-architecture.md  high-level-system-design.md  profiling.md  system-specifications.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
src/disk_space_manager/web/: __init__.py  app.py  jobs.py  repository.py  schemas.py  security.py  server.py  services.py
src/disk_space_manager/web/static/: index.html
src/disk_space_manager/web/static/assets/: charts-u5QlrmDP.js  index-BxxWWjWL.css  index-CB9TwZzn.js
tests/: test_web_api.py  test_web_repository.py
