[project]
name = "disk-space-manager"
version = "1.0.0"
description = "A CLI tool to manage disk space on Unix-like systems by analyzing usage, cleaning caches, and archiving old files to external drives or local folders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "ImageHash>=4.3.1",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0.80",
    "pydantic>=2.7.0",
    "rich>=13.0.0",
    "soundfile>=0.12.1",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
disk-space-manager = "disk_space_manager.cli:cli"
disk-space-manager-web = "disk_space_manager.web.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"disk_space_manager.web" = ["static/index.html", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
